--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,16 @@
+:host {
+  display: block;
+  padding: 20px;
+  font-family: sans-serif;
+}
+
+.title {
+  text-align: center;
+  text-transform: capitalize;
+  color: cadetblue;
+  font-size: 24px;
+}
+
 .form {
   display: flex;
   flex-direction: column;
