--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,29 @@
 <h3 class="title">signal based form</h3>
 <form (submit)="onSubmit($event)" class="form">
-  <input [control]="form.firstName" type="text" placeholder="Enter your first name" class="form-input" />
-  <input [control]="form.lastName" type="text" placeholder="Enter your second name" class="form-input" />
-  <input [control]="form.email" type="email" placeholder="Enter your email" class="form-input" />
+  <div class="form-field">
+    <input [control]="form.firstName" type="text" placeholder="Enter your first name" class="form-input" />
+    @for (error of form.firstName().errors(); track $index) {
+    <small class="form-error">{{ error.message }}</small>
+    }
+  </div>
+
+  <div class="form-field">
+    <input [control]="form.lastName" type="text" placeholder="Enter your second name" class="form-input" />
+    @for (error of form.lastName().errors(); track $index) {
+    <small class="form-error">{{ error.message }}</small>
+    }
+  </div>
+
+  <div class="form-field">
+    <input [control]="form.email" type="email" placeholder="Enter your email" class="form-input" />
+    @for (error of form.email().errors(); track $index) {
+    <small class="form-error">{{ error.message }}</small>
+    }
+  </div>
+
   <label for="notify" class="form-notify">Notify by email:
     <input [control]="form.notify" id="notify" type="checkbox" />
   </label>
-  <button type="submit" class="form-button">save</button>
+
+  <button [disabled]="form().invalid()" type="submit" class="form-button">save</button>
 </form>
