--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,18 +1,18 @@
 <h3 class="title">signal based form</h3>
-<form class="form">
+<form class="form" (submit)="onSubmit($event)">
   <div class="form-field">
-    <input type="text" placeholder="Enter your first name" class="form-input" />
+    <input [control]="userForm.firstName" type="text" placeholder="Enter your first name" class="form-input" />
   </div>
 
   <div class="form-field">
-    <input type="text" placeholder="Enter your second name" class="form-input" />
+    <input [control]="userForm.lastName" type="text" placeholder="Enter your second name" class="form-input" />
   </div>
 
   <div class="form-field">
-    <input type="email" placeholder="Enter your email" class="form-input" />
+    <input [control]="userForm.email" type="email" placeholder="Enter your email" class="form-input" />
   </div>
 
-  <label for="notify" class="form-notify">Notify by email:
+  <label [control]="userForm.notify" for="notify" class="form-notify">Notify by email:
   </label>
 
   <button type="submit" class="form-button">save</button>
